--- a/cityharvest/assets/css/main.css
+++ b/cityharvest/assets/css/main.css
@@ -87,18 +87,30 @@ html {
     font-weight: bold;
 }
 
-.navbar .btn {
+.navbar .btn.login {
     text-decoration: none;
     background: var(--primary-color);
-    color: #fff;
+    color: var(--white-color);
     border: 2px solid var(--primary-color);
     border-radius: 50px;
     padding: 9px 32px;
     transition: all .3s;
 }
 
-.navbar .btn:hover {
+.navbar .btn.login:hover {
     background: transparent;
-    color: var(--primary-color);
+    color: var(--white-color);
     border: 2px solid var(--primary-color);
+}
+
+.navbar .btn.give {
+    color: var(--white-color);
+    transition: all .3s;
+    /* padding: 9px 32px; */
+}
+
+.navbar .btn.give:hover {
+    background: transparent;
+    color: var(--white-color);
+    background: var(--primary-color);
 }
