--- a/cityharvest/assets/css/index.css
+++ b/cityharvest/assets/css/index.css
@@ -161,20 +161,46 @@
     margin-top: 30px;
 }
 
+#paralax .btn:hover {
+    color: var(--white-color);
+}
+
 /* =====================================================
 # Campus
 ===================================================== */
 #campus {
-    padding: 60px 60px;
+    padding-top: 60px;
+    padding-bottom: 40px;
 }
 
 #campus .container {
     overflow: hidden;
 }
 
-/* #campus .row {
+
+#campus .row {
     gap: .3rem;
-} */
+}
+
+#campus .card {
+    overflow: hidden;
+    position: relative;
+}
+
+
+#campus .card-img {
+    height: 230px;
+}
+
+#campus .card .card-img-top {
+    transition: transform 1s ease-in-out;
+    height: 230px;
+    object-fit: cover;
+}
+
+#campus .card .card-img-top:hover {
+    transform: scale(1.6);
+}
 
 #campus .campus-title {
     position: relative;
@@ -184,7 +210,7 @@
     text-align: center;
     text-transform: uppercase;
     color: var(--black-color);
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     font-size: 40px;
     font-weight: 600;
 }
@@ -198,6 +224,34 @@
     top: 65px;
     background: var(--primary-color);
     border-radius: 5px;
+}
+
+#campus .campus-para {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#campus .card-body {
+    padding: 18px 40px 25px 40px;
+}
+
+#campus .card .campus-text {
+    content: "";
+    position: absolute;
+    top: 30px;
+    right: -32px;
+    bottom: 0;
+    transform: rotate(-90deg);
+    box-shadow: 0px 10px 3px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--primary-color);
+    color: var(--white-color);
+    width: 100px;
+    height: 20px;
+    padding: 20px;
+    z-index: 1;
 }
 
 #campus .card-body>* {
@@ -214,5 +268,199 @@
 
 #campus .card-body .btn {
     margin-bottom: 10px;
-    padding: 12px 24px;
+    padding: 9px 22px;
+    background: var(--primary-color);
+    color: var(--white-color);
+    transition: all .3s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+#campus .card-body .btn:hover {
+    opacity: .8;
+}
+
+/* =====================================================
+# latest-message
+===================================================== */
+#latest-message {
+    padding-top: 0px;
+    padding-bottom: 30px;
+}
+
+#latest-message .container {
+    overflow: hidden;
+}
+
+#latest-message .latest-message-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--black-color);
+    margin-bottom: 60px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#latest-message .latest-message-title::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
+}
+
+
+#latest-message .video-wrapper {
+    position: relative;
+    /* padding-bottom: 56.25%; */
+    padding-bottom: 54.25%;
+    /* 16:9 */
+    width: 100%;
+    height: 200px;
+}
+
+#latest-message .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+/* =====================================================
+# abundant-harvest
+===================================================== */
+#abundant-harvest {
+    padding-top: 30px;
+    padding-bottom: 40px;
+}
+
+#abundant-harvest .container {
+    overflow: hidden;
+}
+
+#abundant-harvest img {
+    border-radius: 20px;
+}
+
+/* =====================================================
+# Weekly-services
+===================================================== */
+#weekly-services {
+    padding-top: 0px;
+    padding-bottom: 40px;
+}
+
+#weekly-services .container {
+    overflow: hidden;
+}
+
+
+#weekly-services .row {
+    gap: .5rem;
+}
+
+#weekly-services .card {
+    overflow: hidden;
+    position: relative;
+}
+
+
+#weekly-services .card-img {
+    height: 230px;
+}
+
+#weekly-services .card .card-img-top {
+    transition: transform 1s ease-in-out;
+    height: 230px;
+    object-fit: cover;
+}
+
+#weekly-services .card .card-img-top:hover {
+    transform: scale(1.6);
+}
+
+#weekly-services .weekly-services-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--black-color);
+    margin-bottom: 50px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#weekly-services .weekly-services-title::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
+}
+
+#weekly-services .weekly-services-para {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#weekly-services .card-body {
+    padding: 18px 40px 25px 40px;
+}
+
+#weekly-services .card .weekly-services-text {
+    content: "";
+    position: absolute;
+    /* top: 30px; */
+    /* left: 0; */
+    right: -32px;
+    bottom: 25px;
+    transform: rotate(-90deg);
+    box-shadow: 0px 10px 3px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--primary-color);
+    color: var(--white-color);
+    width: 100px;
+    height: 20px;
+    padding: 20px;
+    z-index: -1;
+}
+
+#weekly-services .card-body>* {
+    margin-top: 17px;
+}
+
+#weekly-services .card-body h2 {
+    text-transform: uppercase;
+}
+
+#weekly-services .card-body p {
+    text-align: justify;
+}
+
+#weekly-services .card-body .btn {
+    margin-bottom: 10px;
+    padding: 9px 22px;
+    background: var(--primary-color);
+    color: var(--white-color);
+    transition: all .3s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+#weekly-services .card-body .btn:hover {
+    opacity: .8;
 }
