--- a/cityharvest/assets/css/main.css
+++ b/cityharvest/assets/css/main.css
@@ -95,6 +95,7 @@ html {
     border-radius: 50px;
     padding: 9px 32px;
     transition: all .3s;
+    margin-right: 10px;
 }
 
 .navbar .btn.login:hover {
@@ -104,13 +105,13 @@ html {
 }
 
 .navbar .btn.give {
+    background: transparent;
     color: var(--white-color);
     transition: all .3s;
-    /* padding: 9px 32px; */
+    padding: 9px 32px;
 }
 
 .navbar .btn.give:hover {
-    background: transparent;
     color: var(--white-color);
     background: var(--primary-color);
 }
