--- a/cityharvest/assets/css/utilities.css
+++ b/cityharvest/assets/css/utilities.css
@@ -225,14 +225,17 @@
 .card {
     background-color: var(--white-color);
     color: #333;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+    /* border-radius: 10px; */
+    border-radius: 20px;
+    /* box-shadow: 0 3px 10px rgba(31, 197, 2, 0.15); */
+    box-shadow: 0px 1px 10px rgba(31, 197, 2, 0.15);
     margin: 5px;
 }
 
 .card-img {
     width: 100%;
     border-radius: calc(0.25rem - 1px);
+    overflow: hidden;
 }
 
 .card-img-top {
@@ -241,7 +244,7 @@
     border-top-right-radius: calc(0.45rem - 1px);
 }
 
-.inner {
+.card-inner {
     overflow: hidden;
 }
 
