--- a/cityharvest/assets/css/utilities.css
+++ b/cityharvest/assets/css/utilities.css
@@ -170,6 +170,12 @@
     gap: 5px;
 }
 
+.grid-4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* gap: 5px; */
+}
+
 .grid-ish {
     display: flex;
     flex-wrap: wrap;
