--- a/cityharvest/assets/css/utilities.css
+++ b/cityharvest/assets/css/utilities.css
@@ -189,7 +189,7 @@
 @media only screen and (max-width:576px) {
 
     .grid-2,
-    .grid-3 {
+    .grid-3,.grid-4 {
         grid-template-columns: repeat(1, 1fr);
         gap: 3px;
     }
