--- a/cityharvest/assets/css/main.css
+++ b/cityharvest/assets/css/main.css
@@ -137,7 +137,7 @@ html {
         display: block;
         margin-right: 30px;
         cursor: pointer;
-        font-size: 22px;
+        font-size: 21px;
         color: var(--primary-color);
     }
 
@@ -267,7 +267,7 @@ html {
 #footer a {
     text-decoration: none;
     color: var(--gray-color);
-    font-weight: 500;
+    /* font-weight: 500; */
     transition: all .3s;
 }
 
@@ -276,7 +276,6 @@ html {
 }
 
 #footer .col-title {
-    /* font-family: 'Inter', sans-serif; */
     margin-bottom: 15px;
 }
 
