--- a/cityharvest/assets/css/index.css
+++ b/cityharvest/assets/css/index.css
@@ -530,7 +530,7 @@
 #weekly-services .card {
     overflow: hidden;
     position: relative;
-    /* background: var(--secondary-color); */
+    background: var(--secondary-color);
 }
 
 /* #weekly-services #wed {
