--- a/cityharvest/assets/css/main.css
+++ b/cityharvest/assets/css/main.css
@@ -20,6 +20,11 @@ html {
     scroll-behavior: smooth;
 }
 
+.grassmorphir {
+    background: hsla(0, 0%, 100%, .9);
+    backdrop-filter: blur(10px);
+}
+
 /* =====================================================
 # Navigation
 ===================================================== */
@@ -145,49 +150,50 @@ html {
         position: absolute;
         display: flex;
         flex-direction: column;
-        /* background: var(--light-color); */
+        background: hsla(120, 1%, 19%, 0.9);
+        backdrop-filter: blur(10px);
         top: 0;
         left: -150%;
-        height: 1200px;
+        height: 1500px;
         width: 100%;
-        margin-top: 75px;
+        margin-top: 80px;
         padding: 30px 30px;
         transition: all .8s;
-        border-top: 1px solid var(--light-gray-color);
-        gap: 0.6rem;
+    }
+
+    .navbar .navbar-nav {
+        position: absolute;
+        left: 0;
+        display: flex;
+        justify-content: start;
+        align-items: flex-start;
+        flex-direction: column;
+        padding: 30px 30px;
+        transition: all .8s;
+        gap: 2rem;
     }
 
     .navbar #check:checked~.navbar-menu {
         left: 0;
     }
 
-    .nav-item .nav-link::before {
-        height: 3px;
-        width: 13%;
+    .navbar .nav-item .nav-link {
+        color: var(--primary-color);
     }
 
-    .navbar .social {
+    .navbar .login-give {
+        display: flex;
+        justify-content: start;
+        align-items: flex-start;
+        flex-direction: row;
         position: absolute;
-        background: var(--light-color);
-        top: 520px;
-        left: -150%;
-        transition: all .3s;
-    }
-
-    .navbar #check:checked~.social {
+        top: 480px;
         left: 0;
-    }
-
-    .navbar .btn {
-        position: absolute;
-        background: var(--light-color);
-        top: 580px;
-        left: -150%;
-        margin-left: 30px;
+        margin-left: 43px;
         transition: all .3s;
     }
 
-    .navbar #check:checked~.btn {
+    .navbar #check:checked~.login-give {
         left: 0;
     }
 
@@ -199,50 +205,6 @@ html {
         font-size: 18px;
     }
 }
-
-/* @media only screen and (max-width: 576px) {
-    .navbar #check-btn {
-        margin-right: 20px;
-    }
-
-    .navbar .nav-brand .brand {
-        width: 50px;
-        margin-left: 15px;
-    }
-
-    .navbar .nav-brand .brand-2 {
-        width: 130px;
-    }
-
-    .navbar .dropdown .dropdown-menu {
-        gap: .2rem;
-        width: 100%;
-    }
-} */
-
-/* @media only screen and (max-width: 326px) {
-    .navbar .nav-brand {
-        margin-left: -15px;
-    }
-
-    .navbar #check-btn {
-        font-size: 22px;
-    }
-
-    .navbar .navbar-nav {
-        padding: 40px 25px;
-    }
-} */
-
-/* @media only screen and (max-width: 300px) {
-    .navbar .nav-brand {
-        margin-left: -15px;
-    }
-
-    .navbar #check-btn {
-        font-size: 18px;
-    }
-} */
 
 
 /* =====================================================
@@ -391,7 +353,7 @@ html {
         margin-top: 17px;
         margin-bottom: 10px;
     }
-    
+
     #footer .social {
         margin-top: 50px;
         margin-left: 0px;
