--- a/cityharvest/assets/css/index.css
+++ b/cityharvest/assets/css/index.css
@@ -214,13 +214,13 @@
 /* ==== Media Queries ==== */
 @media only screen and (max-width: 1060px) {
     #pastors .container {
-        padding: 0 4 0px;
+        padding: 0 40px;
     }
 }
 
 @media only screen and (max-width: 578px) {
     #pastors {
-        padding-top: 50px;
+        padding-top: 5px;
         padding-bottom: 60px;
     }
 
