--- a/cityharvest/assets/css/main.css
+++ b/cityharvest/assets/css/main.css
@@ -25,345 +25,6 @@ html {
     backdrop-filter: blur(10px);
 }
 
-/* =====================================================
-# Navigation
-===================================================== */
-.navbar {
-    height: 80px;
-    width: 100%;
-    position: fixed;
-    top: 22px;
-    left: 0;
-    right: 0;
-    z-index: 1030;
-    /* box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1); */
-    /* background: linear-gradient(to left top, var(--primary-color), #44be07); */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* border-top: 2px solid hsl(0, 0%, 100%, .8);
-    border-left: 2px solid hsl(0, 0%, 100%, .8); */
-    /* background: hsl(0, 0%, 100%, .3); */
-    /* background: hsl(0, 0%, 100%, .8);
-    backdrop-filter: blur(10px); */
-    /* background: var(--white-color); */
-    /* backdrop-filter: blur(10px); */
-    transition: all .2s;
-}
-
-.navbar .nav-brand {
-    margin-left: 100px;
-}
-
-.navbar .nav-brand img {
-    width: 100px;
-    outline: none;
-}
-
-.navbar .navbar-menu {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-right: 100px;
-}
-
-.navbar .navbar-nav {
-    display: flex;
-    align-items: center;
-}
-
-.navbar .navbar-nav .nav-item {
-    list-style: none;
-    margin: 0 15px;
-}
-
-.navbar .navbar-nav .nav-item .nav-link {
+a {
     text-decoration: none;
-    color: var(--light-color);
-    transition: all .3s;
-}
-
-.navbar .navbar-nav .nav-item .nav-link:hover {
-    color: var(--primary-color);
-}
-
-.navbar .navbar-nav .nav-item .nav-link.active {
-    color: var(--primary-color);
-    font-weight: bold;
-}
-
-.navbar .btn.login {
-    text-decoration: none;
-    background: var(--primary-color);
-    color: var(--white-color);
-    border: 2px solid var(--primary-color);
-    border-radius: 50px;
-    padding: 9px 32px;
-    transition: all .3s;
-    margin-right: 10px;
-}
-
-.navbar .btn.login:hover {
-    background: transparent;
-    color: var(--white-color);
-    border: 2px solid var(--primary-color);
-}
-
-.navbar .btn.give {
-    background: transparent;
-    color: var(--white-color);
-    transition: all .3s;
-    padding: 9px 32px;
-}
-
-.navbar .btn.give:hover {
-    color: var(--white-color);
-    background: var(--primary-color);
-}
-
-.navbar #check-btn,
-.navbar #check {
-    display: none;
-}
-
-
-/* ==== Media Queries ==== */
-
-@media only screen and (max-width: 1060px) {
-    .navbar .nav-brand {
-        margin-left: 30px;
-    }
-
-    .navbar .nav-brand img {
-        width: 80px;
-    }
-
-    .navbar #check-btn {
-        display: block;
-        margin-right: 30px;
-        cursor: pointer;
-        font-size: 21px;
-        color: var(--primary-color);
-    }
-
-    .navbar .navbar-menu {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        background: hsla(120, 1%, 19%, 0.9);
-        backdrop-filter: blur(10px);
-        top: 0;
-        left: -150%;
-        height: 1500px;
-        width: 100%;
-        margin-top: 80px;
-        padding: 30px 30px;
-        transition: all .8s;
-    }
-
-    .navbar .navbar-nav {
-        position: absolute;
-        left: 0;
-        display: flex;
-        justify-content: start;
-        align-items: flex-start;
-        flex-direction: column;
-        padding: 30px 30px;
-        transition: all .8s;
-        gap: 2rem;
-    }
-
-    .navbar #check:checked~.navbar-menu {
-        left: 0;
-    }
-
-    .navbar .nav-item .nav-link {
-        color: var(--primary-color);
-    }
-
-    .navbar .login-give {
-        display: flex;
-        justify-content: start;
-        align-items: flex-start;
-        flex-direction: row;
-        position: absolute;
-        top: 480px;
-        left: 0;
-        margin-left: 43px;
-        transition: all .3s;
-    }
-
-    .navbar #check:checked~.login-give {
-        left: 0;
-    }
-
-    .navbar-nav .nav-item {
-        margin: 15px 0;
-    }
-
-    .nav-item .nav-link {
-        font-size: 18px;
-    }
-}
-
-
-/* =====================================================
-# Footer
-===================================================== */
-#footer {
-    padding-top: 70px;
-    padding-bottom: 60px;
-    background: var(--white-color);
-}
-
-#footer .logo {
-    width: 150px;
-}
-
-#footer ul li {
-    list-style: none;
-    margin-bottom: 4px;
-
-}
-
-#footer a {
-    text-decoration: none;
-    color: var(--gray-color);
-    /* font-weight: 500; */
-    transition: all .3s;
-}
-
-#footer a:hover {
-    color: var(--primary-color);
-}
-
-#footer .col-title {
-    margin-bottom: 15px;
-}
-
-#footer .col-staff {
-    margin-top: 30px;
-}
-
-#footer .staff-mail {
-    border-radius: 50px;
-    border: 2px solid var(--primary-color);
-    padding: 10px 24px;
-    background: var(--primary-color);
-    color: var(--white-color);
-    transition: all .3s;
-    box-shadow: 0px 1px 10px rgba(31, 197, 2, 0.15);
-    font-weight: normal;
-}
-
-#footer .staff-mail:hover {
-    border: 2px solid var(--primary-color);
-    background: transparent;
-    color: var(--primary-color);
-}
-
-#footer .social {
-    margin-top: 50px;
-}
-
-#footer .social .fab {
-    color: var(--gray-color);
-    margin-right: 12px;
-    font-size: 20px;
-    transition: all .3s;
-}
-
-#footer .social .fab:hover {
-    color: var(--primary-color);
-}
-
-/* == Go-Top == */
-
-.go_top {
-    position: fixed;
-    bottom: 16px;
-    right: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: all .5s;
-}
-
-.go_top.active {
-    bottom: 32px;
-    pointer-events: auto;
-    opacity: 1;
-}
-
-.go_top a {
-    background: var(--primary-color);
-    color: var(--secondary-color);
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    font-size: 27px;
-    transition: all .5s;
-    animation: colur 1s infinite alternate;
-}
-
-.go_top a:hover {
-    background: var(--secondary-color);
-    color: var(--primary-color);
-    transition: all .5s;
-    animation: colour 1s infinite alternate;
-}
-
-
-.go_top .fa-angle-up {
-    margin-top: 12px;
-    margin-left: 17px;
-}
-
-@keyframes colur {
-    from {
-        color: var(--primary-color);
-    }
-
-    to {
-        color: var(--secondary-color);
-    }
-}
-
-@keyframes colour {
-    from {
-        color: var(--secondary-color);
-    }
-
-    to {
-        color: var(--primary-color);
-    }
-}
-
-/* ==== Media Queries ==== */
-
-@media only screen and (max-width: 1060px) {
-    #footer {
-        padding-top: 50px;
-    }
-
-    #footer .col-staff {
-        margin-top: 35px;
-        margin-left: 0px;
-    }
-
-    #footer .col-title {
-        margin-top: 17px;
-        margin-bottom: 10px;
-    }
-
-    #footer .social {
-        margin-top: 50px;
-        margin-left: 0px;
-    }
-
-    #footer .copyright {
-        margin-bottom: 40px;
-    }
 }
