--- a/cityharvest/assets/css/contact.css
+++ b/cityharvest/assets/css/contact.css
@@ -6,8 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(to left top, var(--primary-color), rgba(234, 239, 231, 0.8)), url('../img/church/church2.jpg');
-    /* background: linear-gradient(to left top, rgba(65, 146, 3, 0.8), rgba(234, 239, 231, 0.8)), url('../img/church/church2.jpg'); */
+    background: linear-gradient(to left top, rgba(65, 146, 3, 0.8), rgba(234, 239, 231, 0.6)), url('../img/church/church2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
@@ -55,27 +54,370 @@
 
 }
 
-/* =====================================================
-# Services Schedule
-===================================================== */
-#services-schedule .card {
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    background: hsl(0, 0%, 100%, .3);
-    backdrop-filter: blur(10px);
+/*=================================================
+# Contact-info
+==================================================*/
+#contact-info {
+    padding-top: 50px;
+    padding-bottom: 0px;
+    background: var(--light-color);
+    color: var(--dark-color);
+}
+
+#contact-info .container {
+    overflow: hidden;
+}
+
+#contact-info .contact-info-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--black-color);
+    margin-bottom: 60px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#contact-info .contact-info-title::before {
+    content: '';
     position: absolute;
-    bottom: 32px;
-    width: 800px;
-    height: 150px;
-    z-index: 1030;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
 }
 
-#services-schedule .card p {
-    font-size: 18px;
-    font-weight: bold;
+#contact-info .card {
+    position: relative;
 }
 
-#services-schedule .card .head-txt h1,
-#services-schedule .card .head-txt h2 {
-    font-weight: 900;
-    font-family: 'Inter', sans-serif;
+#contact-info .card i {
+    position: absolute;
+    top: 35px;
+    right: 35px;
+    font-size: 25px;
+    color: var(--primary-color);
+}
+
+#contact-info .card .left-our {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    color: var(--secondary-color);
+    background: var(--primary-color);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+#contact-info .card .head-our {
+    transform: rotate(-90deg);
+    font-size: 20px;
+}
+
+#contact-info .card .inner-txt {
+    margin-left: 30px;
+}
+
+#contact-info .inner-txt h2 {
+    text-transform: uppercase;
+}
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 1060px) {
+    #contact-info .container {
+        padding: 0 20px;
+    }
+
+    #contact-info .contact-info-title {
+        margin-bottom: 55px;
+        font-size: 30px;
+    }
+
+    #contact-info .contact-info-title::before {
+        top: 58px;
+    }
+}
+
+
+@media only screen and (max-width: 786px) {
+    #contact-info {
+        padding: 40px 0 30px 0;
+    }
+
+    #contact-info .container {
+        padding: 0 20px;
+    }
+}
+
+/*=================================================
+# Contact Form
+==================================================*/
+#contact-form-wrapper {
+    padding: 0px 0 40px 0;
+    background: var(--light-color);
+    color: var(--dark-color);
+}
+
+#contact-form-wrapper .heading-txt {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: var(--black-color);
+    margin-top: 35px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#contact-form-wrapper .heading-para {
+    text-align: center;
+    margin-top: 40px;
+}
+
+#contact-form-wrapper .heading-txt::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
+}
+
+#contact-form-wrapper .contact-form {
+    margin-top: 35px;
+}
+
+#contact-form-wrapper .contact-form form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
+#contact-form-wrapper form input,
+#contact-form-wrapper form textarea {
+    padding: 16px 44px;
+    width: 100%;
+    border: none;
+    border: 1px solid var(--light-color);
+    border-radius: 3px;
+    outline: none;
+    margin-bottom: 10px;
+    border-left: 3px solid var(--primary-color);
+}
+
+#contact-form-wrapper form .send {
+    background: var(--primary-color);
+    color: var(--white-color);
+    cursor: pointer;
+    transition: all .3s;
+    border-left: 0px solid var(--primary-color);
+}
+
+#contact-form-wrapper form .send:hover {
+    opacity: .8;
+}
+
+#contact-form-wrapper .contact-form .inputs-text-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: .3rem;
+    width: 100%;
+}
+
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 786px) {
+    #contact-form-wrapper {
+        padding: 0px 0 30px 0;
+    }
+
+    #contact-form-wrapper .container {
+        padding: 0 30px;
+    }
+
+    #contact-form-wrapper .heading-txt {
+        font-size: 30px;
+        margin-top: 5px;
+        margin-bottom: 25px;
+    }
+
+    #contact-form-wrapper .heading-para {
+        margin-bottom: 25px;
+    }
+    
+
+    #contact-form-wrapper .heading-txt::before {
+        top: 50px;
+    }
+
+    #contact-form-wrapper .contact-form {
+        margin-top: 0px;
+    }
+
+}
+
+/* =====================================================
+# Weekly-services
+===================================================== */
+#weekly-services {
+    padding-top: 0px;
+    padding-bottom: 55px;
+    background: var(--light-color);
+}
+
+#weekly-services .container {
+    overflow: hidden;
+}
+
+
+#weekly-services .row {
+    gap: .5rem;
+}
+
+#weekly-services .card {
+    overflow: hidden;
+    position: relative;
+    background: var(--secondary-color);
+}
+
+/* #weekly-services #wed {
+    background: var(--secondary-color);
+} */
+
+
+#weekly-services .card-img {
+    height: 230px;
+}
+
+#weekly-services .card .card-img-top {
+    transition: transform 1s ease-in-out;
+    height: 230px;
+    object-fit: cover;
+}
+
+#weekly-services .card .card-img-top:hover {
+    transform: scale(1.6);
+}
+
+#weekly-services .weekly-services-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--black-color);
+    margin-bottom: 50px;
+    font-size: 40px;
+    font-weight: 600;
+}
+
+#weekly-services .weekly-services-title::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 7px;
+    bottom: 0;
+    top: 65px;
+    background: var(--primary-color);
+    border-radius: 5px;
+}
+
+#weekly-services .weekly-services-para {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#weekly-services .card-body {
+    padding: 18px 40px 25px 40px;
+}
+
+#weekly-services .card .weekly-services-text {
+    content: "";
+    position: absolute;
+    right: -32px;
+    bottom: 25px;
+    transform: rotate(-90deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--primary-color);
+    color: var(--white-color);
+    width: 100px;
+    height: 20px;
+    padding: 20px;
+    z-index: -1;
+    border-top-right-radius: 15px;
+}
+
+#weekly-services .card-body>* {
+    margin-top: 17px;
+}
+
+#weekly-services .card-body h2 {
+    text-transform: uppercase;
+}
+
+#weekly-services .card-body p {
+    text-align: justify;
+}
+
+#weekly-services .card-body .btn {
+    margin-bottom: 10px;
+    padding: 9px 22px;
+    background: var(--primary-color);
+    color: var(--white-color);
+    transition: all .3s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+#weekly-services .card-body .btn:hover {
+    opacity: .8;
+}
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width: 1060px) {
+    #weekly-services {
+        padding-top: 0px;
+    }
+
+    #weekly-services .container {
+        padding: 0 20px;
+    }
+
+    #weekly-services .weekly-services-title {
+        margin-bottom: 55px;
+        font-size: 30px;
+    }
+
+    #weekly-services .weekly-services-title::before {
+        top: 58px;
+    }
+}
+
+/*=================================================
+# Location - MAP
+==================================================*/
+.map iframe {
+    width: 100%;
+    height: 450px;
+    border: 0;
+    margin-top: 0px;
+    margin-bottom: -7px;
 }
