--- a/cityharvest/assets/css/contact.css
+++ b/cityharvest/assets/css/contact.css
@@ -1,4 +1,3 @@
-
 /* =====================================================
 # Navigation
 ===================================================== */
@@ -268,6 +267,7 @@
 
 #contact-info .card {
     position: relative;
+    overflow: hidden;
 }
 
 #contact-info .card i {
@@ -288,12 +288,13 @@
     bottom: 0;
     color: var(--secondary-color);
     background: var(--primary-color);
+
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 #contact-info .card .head-our {
     transform: rotate(-90deg);
-    font-size: 20px;
+    font-size: 18px;
 }
 
 #contact-info .card .inner-txt {
@@ -470,13 +471,7 @@
 #weekly-services .card {
     overflow: hidden;
     position: relative;
-    background: var(--secondary-color);
 }
-
-/* #weekly-services #wed {
-    background: var(--secondary-color);
-} */
-
 
 #weekly-services .card-img {
     height: 230px;
