--- a/cityharvest/assets/css/ch_dodoma.css
+++ b/cityharvest/assets/css/ch_dodoma.css
@@ -1,4 +1,3 @@
-
 /* =====================================================
 # Navigation
 ===================================================== */
@@ -179,7 +178,7 @@
     justify-content: center;
     align-items: center;
     height: 60vh;
-    background: linear-gradient(360deg, rgba(65, 146, 3, 0.95), rgba(16, 16, 15, 0.95)), url('../img/church/church1.png');
+    background: linear-gradient(360deg, rgba(65, 146, 3, 0.85), rgba(16, 16, 15, 0.85)), url('../img/church/ch-dodoma1.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom;
@@ -334,128 +333,11 @@
     }
 }
 
-/*=================================================
-# Contact Form
-==================================================*/
-#contact-form-wrapper {
-    padding: 0px 0 40px 0;
-    background: var(--light-color);
-    color: var(--dark-color);
-}
-
-#contact-form-wrapper .container {
-    overflow: hidden;
-}
-
-#contact-form-wrapper .heading-txt {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: var(--black-color);
-    margin-top: 35px;
-    font-size: 40px;
-    font-weight: 600;
-}
-
-#contact-form-wrapper .heading-para {
-    text-align: center;
-    margin-top: 40px;
-}
-
-#contact-form-wrapper .heading-txt::before {
-    content: '';
-    position: absolute;
-    width: 100px;
-    height: 7px;
-    bottom: 0;
-    top: 65px;
-    background: var(--primary-color);
-    border-radius: 5px;
-}
-
-#contact-form-wrapper .contact-form {
-    margin-top: 35px;
-}
-
-#contact-form-wrapper .contact-form form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column wrap;
-}
-
-#contact-form-wrapper form input,
-#contact-form-wrapper form textarea {
-    padding: 16px 44px;
-    width: 100%;
-    border: none;
-    border: 1px solid var(--light-color);
-    border-radius: 3px;
-    outline: none;
-    margin-bottom: 10px;
-    border-left: 3px solid var(--primary-color);
-}
-
-#contact-form-wrapper form .send {
-    background: var(--primary-color);
-    color: var(--white-color);
-    cursor: pointer;
-    transition: all .3s;
-    border-left: 0px solid var(--primary-color);
-}
-
-#contact-form-wrapper form .send:hover {
-    opacity: .8;
-}
-
-#contact-form-wrapper .contact-form .inputs-text-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: .3rem;
-    width: 100%;
-}
-
-
-/* ==== Media Queries ==== */
-
-@media only screen and (max-width: 786px) {
-    #contact-form-wrapper {
-        padding: 0px 0 30px 0;
-    }
-
-    #contact-form-wrapper .container {
-        padding: 0 30px;
-    }
-
-    #contact-form-wrapper .heading-txt {
-        font-size: 30px;
-        margin-top: 0px;
-        margin-bottom: 25px;
-    }
-
-    #contact-form-wrapper .heading-para {
-        margin-bottom: 25px;
-    }
-
-
-    #contact-form-wrapper .heading-txt::before {
-        top: 50px;
-    }
-
-    #contact-form-wrapper .contact-form {
-        margin-top: 0px;
-    }
-
-}
-
 /* =====================================================
 # Weekly-services
 ===================================================== */
 #weekly-services {
-    padding-top: 0px;
+    padding-top: 30px;
     padding-bottom: 55px;
     background: var(--light-color);
 }
@@ -473,7 +355,6 @@
     overflow: hidden;
     position: relative;
 }
-
 
 #weekly-services .card-img {
     height: 230px;
