--- a/cityharvest/assets/css/ch_kigamboni.css
+++ b/cityharvest/assets/css/ch_kigamboni.css
@@ -183,6 +183,7 @@
     background-attachment: fixed;
     background-position: top;
     background-blend-mode: multiply;
+    background-size: cover;
 }
 
 #hero .row {
